--- a/index.html
+++ b/index.html
@@ -1,37 +1,51 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <h1 style="text-align: center;">Calculator</h1>
-        <div class="calc">
-            <input type="text" id="inputField"><br>
-            <div class="row-1">
-                <button id="1">1</button>
-                <button id="2">2</button>
-                <button id="3">3</button>
-                <button id="/">/</button>
-            </div>
-            <div class="row-2">
-                <button id="4">4</button>
-                <button id="5">5</button>
-                <button id="6">6</button>
-                <button id="x">x</button>
-            </div>
-            <div class="row-3">
-                <button id="7">7</button>
-                <button id="8">8</button>
-                <button id="9">9</button>
-                <button id="-">-</button>
-            </div>
-            <div class="row-4">
-                <button id="c">C</button>
-                <button id="0">0</button>
-                <button id="=">=</button>
-                <button id="+">+</button>
-            </div>
-        </div>
-        <script src="script.js"></script>
-    </body>
-</html>
+.calc {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+button {
+    width: 140px;
+    height: 140px;
+    text-align: center;
+    margin-right: 8px;
+    margin-bottom: 13px;
+    font-size: 60px;
+    font-weight: 500;
+    border-radius: 100px;
+    border: none;
+    color: #ffffff;
+    background-color: #2a2a2c;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+button.op {
+    background-color: #ff9f0a;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+button.top {
+    background-color: #5c5c5f;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+#inputField {
+    width: 560px;
+    height: 100px;
+    font-size: 80px;
+    text-align: right;
+    background-color: #000000;
+    border: none;
+    color: #ffffff;
+    font-weight: 500;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    background-color: #000000;
+    color: #ffffff;
+}
