--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1 style="text-align: center;">Calculator</h1>
+        <!-- <h1 style="text-align: center;">Calculator</h1> -->
         <div class="calc">
             <input type="text" id="inputField"><br>
             <div class="row-1">
@@ -14,9 +14,9 @@
                 <button id="/" class="op">÷</button>
             </div>
             <div class="row-2">
-                <button id="1">1</button>
-                <button id="2">2</button>
-                <button id="3">3</button>
+                <button id="7">7</button>
+                <button id="8">8</button>
+                <button id="9">9</button>
                 <button id="x" class="op">×</button>
             </div>
             <div class="row-3">
@@ -26,9 +26,9 @@
                 <button id="-" class="op">–</button>
             </div>
             <div class="row-4">
-                <button id="7">7</button>
-                <button id="8">8</button>
-                <button id="9">9</button>
+                <button id="1">1</button>
+                <button id="2">2</button>
+                <button id="3">3</button>
                 <button id="+" class="op">+</button>
             </div>
             <div class="row-5">
